--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,10 @@ body {
   background-color: #0056b3;
 }
 
+#toggle-favorite-btn {
+  display: none;
+}
+
 #quote {
   font-style: italic;
 }
@@ -31,4 +35,31 @@ body {
 #quote::before,
 #quote::after {
   content: '"';
+}
+
+.favorites-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.favorite-card {
+  background-color: #f9f9f9;
+  color: #333;
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 25%;
+}
+
+.author {
+  font-style: italic;
+}
+
+.star-icon {
+  font-size: 30px;
+  color: yellow;
+  vertical-align: middle;
+  cursor: pointer;
 }
