--- a/styles.css
+++ b/styles.css
@@ -44,11 +44,11 @@ body {
   /* min-height: 2.3em; */
   /* margin-block-end: 0.7em; */
 }
-
+/* 
 #quote-text::before,
 #quote-text::after {
   content: '"';
-}
+} */
 
 .quote-author {
   font-weight: bold;
